--- a/css/type.css
+++ b/css/type.css
@@ -126,7 +126,7 @@ thead th {
 .wrapper {
   margin-left: auto;
   margin-right: auto;
-  max-width: 60em;
+  max-width: 70em;
   width: 100%;
 }
 
@@ -353,7 +353,7 @@ select {
 
 .pad-top-double,
 .pad-t-2 {
-  padding-top: 2.6rem;
+  padding-top: 5em;
 }
 
 .pad-t-4 {
