--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,10 @@ html {
   padding-top: 5em;
 }
 
+.my-padding-bottom {
+  padding-bottom: 5em;
+}
+
 .black {
   color: var(--color-black)
 }
@@ -37,6 +41,10 @@ html {
 
 .beige {
   background-color: var(--color-beige);
+}
+
+.light-grey {
+ color: #A1A1A1;
 }
 
 /*Main Banner*/
@@ -143,6 +151,28 @@ h4 {
   text-transform: uppercase;
 }
 
+/*Footer*/
+
+.footer {
+  border-top: 1px solid #A1A1A1;
+}
+
+.footer-monogram {
+  width: 15%;
+  margin: 0 auto;
+}
+
+.photographer a {
+  text-decoration: none;
+  color: #a1a1a1;
+  border-bottom: 1px solid #A1A1A1;
+  transition: all .3s ease-in-out;
+}
+
+.photographer a:hover {
+  color: #3C5951;
+  border-bottom: 1px solid #3C5951;
+}
 
 @media only screen and (min-width: 608px) {
 
@@ -151,6 +181,14 @@ h4 {
   }
 
   .main-nav ul {
+    text-align: right;
+  }
+
+  .footer-text {
+    text-align: center;
+  }
+
+  .photographer {
     text-align: right;
   }
 }
