Make additional info responsive and add content

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,14 @@ h2 {
   line-height: 4.5rem;
 }
 
+h3 {
+  letter-spacing: 3px;
+}
+
+h4 {
+  text-transform: uppercase;
+}
+
 h3, h4,p, a {
   font-family: var(--font-secondary);
 }
@@ -171,20 +179,24 @@ h3, h4,p, a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
-  height: 1500px;
+  height: 800px;
 }
 
 /*Additional Information*/
+
+.additional-info-section {
+  width: 80%;
+}
+
+.info-block {
+  text-align: center;
+}
 
 .info-sections {
   border-bottom: 1px solid #414141;
   margin: 1em;
   text-transform: uppercase;
   padding-bottom: .5em;
-}
-
-h4 {
-  text-transform: uppercase;
 }
 
 /*Footer*/
@@ -210,6 +222,17 @@ h4 {
   border-bottom: 1px solid #3C5951;
 }
 
+@media only screen and (min-width: 400px) {
+
+  .info-block {
+    text-align: left;
+  }
+
+  .info-icon {
+    padding-right: .8em;
+  }
+}
+
 @media only screen and (min-width: 608px) {
 
   .main-nav {
@@ -220,11 +243,46 @@ h4 {
     text-align: right;
   }
 
+  .wedding-schedule-background {
+    height: 1000px;
+  }
+
+  .info-block {
+    text-align: center;
+  }
+
   .footer-text {
     text-align: center;
   }
 
   .photographer {
     text-align: right;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+
+  .wedding-schedule-background {
+    height: 1200px;
+  }
+
+}
+
+@media only screen and (min-width: 960px) {
+  
+  .wedding-schedule-background {
+    height: 1400px;
+  }
+
+  .info-block {
+    text-align: left;
+  }
+
+}
+
+@media only screen and (min-width: 1290px) {
+  
+  .wedding-schedule-background {
+    height: 1800px;
   }
 }
