Add banner and make responsive

--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,10 @@ h3, h4,p, a {
  color: #A1A1A1;
 }
 
+.white {
+  color: white;
+}
+
 /*Main Banner*/
 
 .main-banner {
@@ -199,14 +203,35 @@ h3, h4,p, a {
   padding-bottom: .5em;
 }
 
+/*Celebrate banner*/
+
+.celebrate-banner {
+  background-image: url('../images/celebrate-banner.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
+  background-attachment: local;
+  height: 600px;
+  position: relative;
+}
+
+.celebrate-text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+}
+
 /*Footer*/
 
 .footer {
   border-top: 1px solid #A1A1A1;
+  text-align: center;
 }
 
 .footer-monogram {
-  width: 15%;
+  width: 35%;
   margin: 0 auto;
 }
 
@@ -249,6 +274,11 @@ h3, h4,p, a {
 
   .info-block {
     text-align: center;
+  }
+
+  .footer-monogram {
+    width: 15%;
+    margin: 0 auto;
   }
 
   .footer-text {
