Fix background image to fit large screens

--- a/css/main.css
+++ b/css/main.css
@@ -332,3 +332,11 @@ h3, h4,p, a {
     height: 1800px;
   }
 }
+
+
+@media only screen and (min-width: 2200px) {
+  
+  .wedding-schedule-background {
+    height: 2000px;
+  }
+}
