--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ h3, h4,p, a {
 }
 
 .italic {
-  font-tyle: italic;
+  font-style: italic;
 }
 
 .black {
@@ -297,6 +297,21 @@ h3, h4,p, a {
 .story-column {
   width: 75%;
   margin: 0 auto;
+}
+
+/*Comics*/
+
+.comics-link {
+  text-decoration: none;
+  padding-bottom: .2em;
+  border-bottom: 3px solid #ECC2AD;
+  transition: all .3s ease-in-out;
+}
+
+.comics-link:hover {
+  color: var(--color-green);
+  letter-spacing: 1px;
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 400px) {
